added the controller and the routes
